# up2date

./: .gitignore  .goreleaser.yaml  Cargo.toml  Containerfile  README.md  README.zh_CN.md
.github/: dependabot.yaml
.github/workflows/: cd.yaml  ci.yaml
scripts/: init.sh
src/: main.rs
tests/: integration.rs
